--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
 
         <section id="trainings">
             <h2>Trainings</h2>
-            <p>Develop in making a website</p>
-            <p>Watching video tutorials</p>
-            <p>Choose coding language you want to learn first</p>
+            <p>Creating simple website</p>
+            <p>Watching video tutorials</p>
 
         </section>
     </main>
