--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section id="hero">
         <h2>Hello this is my Resume</h2>
-        <p>I'm a web developer with expertise in HTML, CSS, and JavaScript.</p>
+        <p>I'm Kentdrick Felipe creating a program is an art of telling another human being what one, wants the computer to do.</p>
     </section>
 
     <main>
